...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp"
        android:text="@string/new_account_description_five" />

    <EditText
        android:id="@+id/new_account_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="monospace"
        android:hint="@string/new_account_username"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textVisiblePassword" />


    <Button
        android:id="@+id/new_account_create_lockbook"
        style="@style/Main.Button.Borderless.Colored"
        android:text="@string/new_account_submit" />

    <ProgressBar
        android:id="@+id/new_account_progress_bar"
        style="?android:attr/progressBarStyle"
...
