<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fabs_holder"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|end"
    android:gravity="center"
    android:orientation="vertical">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/list_files_fab_drawing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:contentDescription="@string/list_files_create_document"
        android:src="@drawable/ic_baseline_draw_24"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/list_files_fab_document"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/list_files_create_document"
        android:src="@drawable/ic_baseline_insert_drive_file_24"
        android:layout_margin="5dp"
        app:layout_anchor="@id/list_files_fab_folder"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/list_files_fab_folder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/list_files_create_folder"
        android:layout_margin="5dp"
        android:src="@drawable/ic_baseline_folder_24"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/list_files_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:contentDescription="@string/list_files_create_file"
        android:src="@drawable/ic_baseline_add_24"/>

</LinearLayout>
