...
        <Button
            android:id="@+id/create_file_folder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="?attr/colorPrimary"
            android:text="Create"
            android:textColor="#000000"
            android:onClick="@{() -> newFileFolderActivity.createFileFolder()}"/>

    </LinearLayout>
</layout>

